--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.1",
         "laravel/passport": "^8.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravolt/avatar": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
