--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/helpers": "^1.1",
         "laravel/passport": "^8.2",
         "laravel/tinker": "^2.0",
-        "laravolt/avatar": "^3.0"
+        "laravolt/avatar": "^3.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
